bootcamp トップページ

--- a/app/assets/stylesheets/blocks/welcome/main-visual/_main-visual-nav.sass
+++ b/app/assets/stylesheets/blocks/welcome/main-visual/_main-visual-nav.sass
@@ -3,7 +3,7 @@
   &.is-fixed
     +position(fixed, left 0, top 0)
     +size(100% 4rem)
-    background-color: #ec4963
+    background-color: $welcome-main-color
     transition: all .2s ease-in
     .container
       height: 100%
