--- a/app/assets/stylesheets/settings/variables/_0colors.sass
+++ b/app/assets/stylesheets/settings/variables/_0colors.sass
@@ -61,3 +61,10 @@ $button-sm-height-ratio: 2.2
 $button-md-height-ratio: 2.7
 $button-lg-height-ratio: 2.85
 $button-xl-height-ratio: 2.85
+
+/////////////////////
+// welcome
+/////////////////////
+
+$welcome-main-color: #19b1d9
+$welcome-default-text: #5a5f60
