--- a/app/views/application/_formrun.html.slim
+++ b/app/views/application/_formrun.html.slim
@@ -240,4 +240,4 @@
       ul.auth-form-action__items
         li.auth-form-action__item
           button.is-button-standard-md-warning(data-formrun-default-text=("送信") data-formrun-error-text="未入力の項目があります" data-formrun-submitting-text="送信中..." type="submit")
-            | インターンに申込む
+            | 申し込む
