--- a/app/views/home/_form.slim
+++ b/app/views/home/_form.slim
@@ -1,6 +1,6 @@
 section.welcome-section.is-auth-form
   .container#form
     h2.welcome-section__title
-      | インターンに申し込む
+      | 申し込みフォーム
     section.welcome-child-section
       = render("formrun")
