--- a/app/views/home/_tutorials.slim
+++ b/app/views/home/_tutorials.slim
@@ -1,16 +1,11 @@
 section.welcome-section#tutorials
   .container
     h2.welcome-section__title
-      = image_tag('question.svg', class: 'welcome-section__title-question-icon')
       | 何を学ぶの？
     section.welcome-child-section
       .welcome-child-section__description.is-lead-text
         p.is-text-align-center-md-up
-          | 学習内容は以下になります。
-          br.is-hidden-sm-down
-          | 全てを終えるまで、プログラム未経験の方だと一年以上、
-          br.is-hidden-sm-down
-          | 経験のある方で半年くらいかかります。
+          | 一人でWebサービスを作って公開できることをゴールとしたカリキュラムを用意しています。
       .welcome-small-sections
         .row.is-gutter-width-24.welcome-small-sections__row
           .col-xs-6.col-md-3
