--- a/app/views/home/welcome.html.slim
+++ b/app/views/home/welcome.html.slim
@@ -4,9 +4,10 @@
 
 = render('main_visual')
 .welcome-sections
-  = render('fee')
+  = render('about')
   = render('eligibility')
   = render('tutorials')
+  = render('process')
   = render('finding_employment')
   = render('administrator')
   = render('other')
