--- a/app/assets/stylesheets/blocks/welcome/_welcome.sass
+++ b/app/assets/stylesheets/blocks/welcome/_welcome.sass
@@ -1,3 +1,6 @@
+body.home-welcome
+  color: $welcome-default-text
+
 .welcome-container
   max-width: 60rem
   +margin(horizontal, auto)
@@ -10,9 +13,6 @@
     +padding(vertical, 2rem)
     margin-top: 0
   &.is-auth-form
-    margin-top: 0
-    padding-top: 3rem
-    background-color: $background-color
     #form
       margin-top: -6rem
       padding-top: 6rem
@@ -23,160 +23,22 @@
       +padding(vertical, 2rem)
 
 .welcome-section__title
-  +text-block(1.75rem 1.45 1.25rem, 600 center #ec4963)
+  +text-block(1.75rem 1.45 .8em, 400 center $welcome-main-color)
   +media-breakpoint-down(sm)
     +text-block(1.25rem 1.3 1rem)
     +position(relative)
 
-.welcome-section__title-question-icon
-  height: 2.25rem
-  +top(-1rem)
-  margin-right: .625rem
-  +media-breakpoint-down(sm)
-    height: 2.25rem
-    display: block
-    +margin(horizontal, auto)
-    margin-bottom: .75rem
-    +top(0)
-
 .welcome-child-section__title
-  +text-block(1.375rem 1.45 .6em, 600 center)
+  +text-block(1.25rem 1.45 .8em, 400 center $welcome-main-color)
   +media-breakpoint-down(sm)
     font-size: 1rem
 
-.welcome-child-section__top-image
-  +margin(vertical, 1.25rem)
-  +media-breakpoint-down(sm)
-    height: 5rem
-    display: block
-    margin: 0 auto 1rem
-
-.welcome-child-section__member-image-container
-  +margin(horizontal, .5rem)
-
-.welcome-child-section__member-image
-  border-radius: 50%
-  +media-breakpoint-down(sm)
-    max-width: 5rem
-    margin: 0 auto .75rem
-    display: block
-
-.welcome-child-section__description
+.welcome-section__description
   max-width: 40rem
   +margin(horizontal, auto)
-  margin-bottom: 2rem
-  &.is-lead-tex
-    text-align: center
-    +media-breakpoint-down(sm)
-      text-align: left
-  p
-    +text-block(.9375rem 1.8 1.2em)
-    +media-breakpoint-down(sm)
-      font-size: .875rem
-  table
-    width: 100%
-    margin-top: 1.5rem
-  th,
-  td
-    border: solid .0625rem #ccc
-    +text-block(.875rem 1.6)
-    padding: .5rem 1rem
-  th
-    background-color: #f5f5e6
-    text-align: right
-    white-space: nowrap
-  td
-    text-align: left
-  *:last-child
-    margin-bottom: 0
-
-.welcome-child-section:not(:first-child)
-  margin-top: 3rem
-  +media-breakpoint-down(sm)
-    margin-top: 2rem
-
-.welcome-section__title + .welcome-child-section
-  margin-top: 0
-
-.welcome-child-section__exchange
-  height: 100%
-  align-items: center
-  justify-content: center
-  display: flex
-  flex-direction: column
-
-.welcome-child-section__exchange-icon
-  +size(5rem auto)
-  margin-bottom: .625rem
-  +media-breakpoint-down(sm)
-    transform: rotate(90deg)
-
-.welcome-child-section__exchange-description
-  +text-block(.875rem 1.45, center)
-  +media-breakpoint-down(sm)
-    +margin(vertical, .75rem)
-
-.welcome-small-sections
-  margin-bottom: -1rem
-  .welcome-child-section__title + &
-    margin-top: 1.5rem
-
-.welcome-small-section
-  height: 100%
-  padding-bottom: 1rem
-
-.row.welcome-small-sections__row
-  +media-breakpoint-down(sm)
-    +margin(horizontal, -.5rem)
-    >*[class*=col-]
-      +padding(horizontal, .5rem)
-
-.welcome-small-section__inner
-  background-color: #edf0f2
-  padding: 1.25rem 1.5rem
-  border-radius: .5rem
-  height: 100%
-  padding-bottom: 1rem
-  &.is-work
-    background-color: #eafaff
-  &.is-study
-    background-color: #f5f5e6
-  &.is-dotted
-    background-color: transparent
-    border: dotted .125rem #c8c8c8
-
-.welcome-small-section__icon
-  height: 5rem
-  display: block
-  +margin(horizontal, auto)
-  margin-bottom: 1rem
-
-.welcome-small-section__title
-  +text-block(1rem 1.45 .6em, 600 center)
-  &.is-sm
-    font-size: 1rem
-
-.welcome-small-section__name
-  +text-block(1rem 1.45 .6em, 600)
-
-.welcome-small-section__job
-  +text-block(.75rem 1.45, 400)
-  margin-left: .5rem
-
-.welcome-small-section__sns
-  display: flex
-
-.welcome-small-section__sns-item
-  padding-right: .75rem
-  +text-block(.875rem 1.6 .2em)
-
-.welcome-small-section__description
   p
     +text-block(.875rem 1.8 1.2em)
     +media-breakpoint-down(sm)
-      font-size: .75rem
-  a
-    color: #0098f9
-    +hover-link-reversal
-  p:last-child
+      font-size: .875rem
+  *:last-child
     margin-bottom: 0
