--- a/app/views/home/_administrator.slim
+++ b/app/views/home/_administrator.slim
@@ -97,7 +97,7 @@ section.welcome-section#administrator
                   | 256 interns
                 .welcome-small-section__description
                   p= image_tag('interns.jpg')
-                  p インターンのためのオンライン学習システムです。学習内容、日報、質問が書けます。
+                  p エンジニアを目指す人のためのオンライン学習システムです。学習内容、日報、質問が書けます。
 
     section.welcome-child-section
       h3.welcome-child-section__title
