--- a/app/views/notice_mailer/contact_email.text.erb
+++ b/app/views/notice_mailer/contact_email.text.erb
@@ -10,7 +10,7 @@
 【所属】
 <%= @contact.division %>
 
-【インターン実施場所】
+【学習場所】
 <%= t("activerecord.enums.contact.location_cd.#{@contact.location_cd}") %>
 
 【Macの有無】
