--- a/app/views/static_pages/thanks.html.slim
+++ b/app/views/static_pages/thanks.html.slim
@@ -8,7 +8,7 @@
       | 送信完了
     .thanks__message
       p
-        | インターン申し込みが送信されました。
+        | 申し込みが送信されました。
         br
-        = link_to "@komagata", "https://twitter.com/komagata", target: "_blank"      
+        = link_to "@komagata", "https://twitter.com/komagata", target: "_blank"
         | が折り返しメールします。
