--- a/app/views/contacts/new.html.slim
+++ b/app/views/contacts/new.html.slim
@@ -3,6 +3,6 @@
 .auth-form.is-contact
   header.auth-form__header
     h1.auth-form__title
-      | インターン申し込みフォーム
+      | 申し込みフォーム
   .auth-form__body
     = render 'form', contact: @contact
