--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -2,10 +2,7 @@
 header.page-header
   .container
     .page-header__container
-      h2.page-header__title
-        label.user-part(class= "is-#{@user.part}")
-          = t(@user.part)
-        = @user.login_name
+      h2.page-header__title= @user.login_name
 
 .page-body
   .container
