アイコン追加、文章、デザイン調整

--- a/app/assets/stylesheets/blocks/welcome/_welcome.sass
+++ b/app/assets/stylesheets/blocks/welcome/_welcome.sass
@@ -37,7 +37,7 @@ body.home-welcome
   max-width: 40rem
   +margin(horizontal, auto)
   p
-    +text-block(.875rem 1.8 1.2em)
+    +text-block(1rem 1.8 1.2em)
     +media-breakpoint-down(sm)
       font-size: .875rem
   *:last-child
