--- a/app/assets/stylesheets/settings/variables/_0colors.sass
+++ b/app/assets/stylesheets/settings/variables/_0colors.sass
@@ -66,5 +66,6 @@ $button-xl-height-ratio: 2.85
 // welcome
 /////////////////////
 
-$welcome-main-color: #19b1d9
+$welcome-main-color: #0bb5e1
+$welcome-accent-color: #f4e90f
 $welcome-default-text: #5a5f60
