--- a/app/views/home/_process.slim
+++ b/app/views/home/_process.slim
@@ -9,7 +9,7 @@ section.welcome-section#process
             .welcome-small-section__inner.is-primary
               .row
                 .col-xs-12.col-md-3
-                  = image_tag('my-mac.svg', class: 'welcome-small-section__icon')
+                  = image_tag("mail.svg", class: "welcome-small-section__icon")
                 .col-xs-12.col-md-9
                   h3.welcome-small-section__title
                     | 申し込み
@@ -21,7 +21,7 @@ section.welcome-section#process
             .welcome-small-section__inner.is-primary
               .row
                 .col-xs-12.col-md-3
-                  = image_tag('my-mac.svg', class: 'welcome-small-section__icon')
+                  = image_tag("chat.svg", class: "welcome-small-section__icon")
                 .col-xs-12.col-md-9
                   h3.welcome-small-section__title
                     | オンライン面接
@@ -33,7 +33,7 @@ section.welcome-section#process
             .welcome-small-section__inner.is-primary
               .row
                 .col-xs-12.col-md-3
-                  = image_tag('my-mac.svg', class: 'welcome-small-section__icon')
+                  = image_tag("study.svg", class: "welcome-small-section__icon")
                 .col-xs-12.col-md-9
                   h3.welcome-small-section__title
                     | 学習開始
@@ -45,19 +45,19 @@ section.welcome-section#process
             .welcome-small-section__inner.is-primary
               .row
                 .col-xs-12.col-md-3
-                  = image_tag('my-mac.svg', class: 'welcome-small-section__icon')
+                  = image_tag("programming.svg", class: "welcome-small-section__icon")
                 .col-xs-12.col-md-9
                   h3.welcome-small-section__title
                     | 成果物完成
                   .welcome-small-section__description
                     p
-                      | 学習を進めると、最後の課題に「自分で考えたWebサービスを作る」、というものがあります。これをクリアしますと、Fjord Boot Camp の学習は終了になります。ここで作った成果物を持って就職活動を開始します。
+                      | 学習を進めると、最後の課題に「自分で考えたWebサービスを作る」、というものがあります。これをクリアしますと、Fjord Boot Camp の学習は終了になります。ここで作った成果物を自分のスキルを証明するものの一つとして、これを持って就職活動を開始します。
         .col-sm-12.col-md-12
           section.welcome-small-section.is-wide
             .welcome-small-section__inner.is-primary
               .row
                 .col-xs-12.col-md-3
-                  = image_tag('my-mac.svg', class: 'welcome-small-section__icon')
+                  = image_tag("chat2.svg", class: "welcome-small-section__icon")
                 .col-xs-12.col-md-9
                   h3.welcome-small-section__title
                     | 就職カウンセリング
@@ -69,7 +69,7 @@ section.welcome-section#process
             .welcome-small-section__inner.is-primary
               .row
                 .col-xs-12.col-md-3
-                  = image_tag('my-mac.svg', class: 'welcome-small-section__icon')
+                  = image_tag("tada.svg", class: "welcome-small-section__icon")
                 .col-xs-12.col-md-9
                   h3.welcome-small-section__title
                     | 就職
