--- a/app/views/home/_tutorials.slim
+++ b/app/views/home/_tutorials.slim
@@ -2,7 +2,7 @@ section.welcome-section#tutorials
   .container
     h2.welcome-section__title
       | 何を学ぶの？
-    section.welcome-child-section
+    section.welcome-child-section.is-tutorials
       .welcome-child-section__description.is-lead-text
         p.is-text-align-center-md-up
           | 一人でWebサービスを作って公開できることをゴールとしたカリキュラムを用意しています。
