--- a/app/assets/stylesheets/blocks/welcome/_welcome-small-sections.sass
+++ b/app/assets/stylesheets/blocks/welcome/_welcome-small-sections.sass
@@ -24,6 +24,13 @@
   border-radius: .25rem
   height: 100%
   padding-bottom: 1rem
+  .welcome-small-sections.is-unlimited &
+    padding: 0
+    background-color: transparent
+  .welcome-child-section.is-cases &,
+  .welcome-child-section.is-tutorials &
+    border: dashed 1px #ccc
+    background-color: transparent
   &.is-danger
     background-color: #fcf3ee
   &.is-primary
@@ -34,6 +41,8 @@
   display: block
   +margin(horizontal, auto)
   margin-bottom: 1rem
+  .welcome-small-sections.is-unlimited &
+    +size(6rem)
 
 .welcome-small-section__title
   +text-block(1rem 1.45 .7em, 600 center)
@@ -61,7 +70,7 @@
 
 .welcome-small-section__description
   p
-    +text-block(.75rem 1.8 1.2em)
+    +text-block(.875rem 1.8 1.2em)
   a
     color: #0098f9
     +hover-link-reversal
