--- a/app/views/home/_finding_employment.slim
+++ b/app/views/home/_finding_employment.slim
@@ -6,11 +6,13 @@ section.welcome-section#finding-employment
       p
         | 学費は就職する就職先企業に支払ってもらうという方法でこのサービスを運営しているので、就職時に学費を支払う契約を弊社と交わした企業であることが条件になりますが、
         | 学費の話だけでなく、いいエンジニアがいる会社、今後もプログラマーとして成長できる会社、プログラマーに理解のある企業に就職して、
-        | 今後もプログラミングを好きでい続けてもらいたいと考えています。
+        | 今後もプログラミングを好きでい続けてもらいたいと考えていますので、私たちの考えるいい会社を紹介します。
 
     section.welcome-child-section
       h3.welcome-child-section__title
-        | 例えばこんな会社を紹介します。
+        | 私たちの考えるいい会社とは？
+        br
+        | 例えばこのような会社
       .welcome-small-sections
         .row.is-gutter-width-32
           .col-xs-12.col-md-4
@@ -18,58 +20,59 @@ section.welcome-section#finding-employment
               .welcome-small-section__inner
                 = image_tag('my-mac.svg', class: 'welcome-small-section__icon')
                 h3.welcome-small-section__title
-                  | 勉強会を開催している
+                  | PC環境が充実
                 .welcome-small-section__description
                   p
-                    | 学費は就職する就職先企業に支払ってもらうので、プログラマーとして就職することを希望している方のみが参加することができます。
+                    | 最新のMac、4Kディスプレイ、アーロンチェア...など。
+                    | PC環境が充実している会社はエンジニアの生産性を上げることが会社の利益にとっても良いことを理解しています。
+                    | そういった会社ではエンジニアの待遇も良いです。
           .col-xs-12.col-md-4
             section.welcome-small-section
               .welcome-small-section__inner
                 = image_tag('time.svg', class: 'welcome-small-section__icon')
                 h3.welcome-small-section__title
-                  | リモート勤務可
+                  | リモート勤務OK
                 .welcome-small-section__description
                   p
-                    | 学費は就職する就職先企業に支払ってもらうので、就職時に学費を支払う契約を弊社と交わした企業に就職することが条件になります。
-                    | 学費の話だけでなく、せっかくプログラマーとして就職するのだから、プログラマーに理解があり、今後もプログラミングを好きでい続けられる就職先を紹介します。
+                    | IT技術者需要は今後数十年に渡って毎年増加していくが、2019年をピークに人材は減っていく予想がでています。
+                    | 優秀な技術者の重要性をわかっている企業はリモート勤務を活用して、幅広い人材を集めています。
           .col-xs-12.col-md-4
             section.welcome-small-section
               .welcome-small-section__inner
                 = image_tag('nda.svg', class: 'welcome-small-section__icon')
                 h3.welcome-small-section__title
-                  | アジャイル開発
+                  | オープンソースコミュニティに貢献
                 .welcome-small-section__description
                   p
-                    | プログラミング初心者からプログラマーとして就職できるスキルを身につけるのは簡単ではありません。
-                    | そのため、一週間の合計が24時間以上活動ができることを条件としています。
-                    | ただし、事前に連絡をしていただければ、長期休暇を取ったり、しばらくの間活動休止ができます。
+                    | オープンソース開発者を雇う。イベントのスポンサーになる。
+                    | イベントへの参加費を支給するなどといったオープンソース活動を支援している会社は会社内だけで閉じるのではなく、開かれたコミュニティーと関わることが自社の技術力を上げることを理解しています。
+                    | そういった会社ではエンジニアは技術を伸ばしていくのが当然という空気に触れることができます。
           .col-xs-12.col-md-4
             section.welcome-small-section
               .welcome-small-section__inner
                 = image_tag('time.svg', class: 'welcome-small-section__icon')
                 h3.welcome-small-section__title
-                  | 自分が使いたいPCを買ってもらえる
+                  | 技術情報を発信している
                 .welcome-small-section__description
                   p
-                    | カリキュラムには、実際に多くの方が使っている弊社が運営するサービスのコードに手を入れる課題もあるのでNDA（秘密保持契約）を結んでいただきます。
-                    | NDA契約の際は免許証などの身分証明書をスマホなどで撮った写真を送っていただきます。
+                    | エンジニアブログを公開していたり、イベントで技術的な発表をしているエンジニアのいる会社は技術に関してオープンで閉鎖的でない傾向があります。
+                    | その会社でしか使えない、潰しの効かないエンジニアになるのを避けることができます。
 
           .col-xs-12.col-md-4
             section.welcome-small-section
               .welcome-small-section__inner
                 = image_tag('time.svg', class: 'welcome-small-section__icon')
                 h3.welcome-small-section__title
-                  | すごいプログラマーがいる
+                  | ホワイトな企業
                 .welcome-small-section__description
                   p
-                    | 用意しているカリキュラムはMacを使って学習することを前提に作られています。なので、最新のOSが動くMacを持っていることが必要です。
-                    | これからMacを購入をする場合は、どの機種を買うべきかアドバイスをしますので、相談をしてから購入してください。
+                    | 残業が多い、給料が安い、ブラック企業に行って辛い思いをさせはしません。
           .col-xs-12.col-md-4
             section.welcome-small-section
               .welcome-small-section__inner
                 = image_tag('time.svg', class: 'welcome-small-section__icon')
                 h3.welcome-small-section__title
-                  | 勉強会の参加費支給
+                  | 技術を理解できる上司がいる
                 .welcome-small-section__description
                   p
                     | 無料で学習はできるのですが、学習した内容をより効率よく理解するために、書籍の購入をすすめることがあります。
