ユーザーにメンターフラグを追加

--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -8,7 +8,7 @@ header.page-header.is-margin-bottom-0.has-border-bottom-none
       h2.page-header__title ユーザー一覧
 
 .page-body
-  = render "users_local_nav"
+  = render "nav"
   .container
     .users
       = render "user", users: @users
