--- a/app/views/users/_profile.html.slim
+++ b/app/views/users/_profile.html.slim
@@ -8,4 +8,4 @@
       = user.full_name
     .user-profile__company-name
       = user.company.name
-  = render 'users/user_sns', user: user
+  = render "users/sns", user: user
