--- a/app/views/admin/users/show.html.slim
+++ b/app/views/admin/users/show.html.slim
@@ -11,9 +11,9 @@ header.page-header
         = @user.login_name
         |（#{t("activerecord.enums.user.purposes.#{@user.purpose}")}目的）
       .page-header__action
-        = link_to admin_users_path, class: 'is-button-standard-md-secondary' do
+        = link_to admin_users_path, class: "is-button-standard-md-secondary" do
           i.fa.fa-angle-left
-          = t('interns')
+          | ユーザー一覧
 
 .page-body
   .container
