--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -9,26 +9,32 @@ header.page-header
     .user.is-margin-bottom-24
       .row.is-gutter-width-32
         .col-md-6.col-xs-12
-          = render 'users/user_data', user: @user
+          .user-data
+            .user-data__inner
+              .user-data__main
+                = render "users/profile", user: @user
+                = render "users/dates", user: @user
+                = render "users/purpose", user: @user
+              .user-data__sub
+                .user-data__description
+                  = simple_format @user.description
+
           - if @user.active_practices.present?
-            = render 'users/active_practices', user: @user
-          = render 'users/completed_practices', user: @user
+            = render "users/active_practices", user: @user
+          = render "users/completed_practices", user: @user
 
         - if @reports.any?
           .col-md-6.col-xs-12
-            = render 'users/user_reports', reports: @reports
+            = render "users/reports", reports: @reports
 
     - if current_user == @user || current_user.admin?
       .form-actions
         ul.form-actions__items
           li.form-actions__item
-            = link_to users_path, class: 'is-button-standard-md-secondary' do
-              = t('interns')
+            = link_to "ユーザー一覧", users_path, class: "is-button-standard-md-secondary"
           - if current_user.admin?
             li.form-actions__item
-              = link_to edit_admin_user_path, class: 'is-button-standard-lg-secondary' do
-                | 管理者として情報変更
+              = link_to "管理者として情報変更", edit_admin_user_path, class: "is-button-standard-lg-secondary"
           - if current_user == @user
             li.form-actions__item
-              = link_to edit_user_path, class: 'is-button-standard-lg-warning' do
-                | 登録情報を変更する
+              = link_to "登録情報を変更する", edit_user_path, class: "is-button-standard-lg-warning"
