--- a/app/assets/stylesheets/blocks/user/_users.sass
+++ b/app/assets/stylesheets/blocks/user/_users.sass
@@ -2,6 +2,9 @@
   padding-bottom: 1.5rem
   height: 100%
 
+.users-item.inactive
+  opacity: 0.5
+
 .users-item__inner
   background-color: $base-color
   border-radius: .25rem
