--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -2,8 +2,7 @@
 
 .auth-form.is-sign-up
   header.auth-form__header
-    h1.auth-form__title
-      = t('editing_user')
+    h1.auth-form__title アカウント編集
   .auth-form__body
     = render 'form', user: @user, companies: @companies
   footer.auth-form__footer
@@ -14,5 +13,10 @@
             | 秘密保持契約内容を確認
 
 
-  h2 退会
-  p= link_to "退会する", current_user, method: :delete, data: { confirm: "本当によろしいですか？この操作はデータを削除するため元に戻すことができません。" }
+.auth-form.is-sign-up
+  header.auth-form__header
+    h1.auth-form__title 退会
+  .auth-form__body
+    ul.auth-form-action__items
+      li.auth-form-action__item
+        = link_to "退会する", current_user, method: :delete, class: "is-button-standard-md-warning", data: { confirm: "本当によろしいですか？この操作はデータを削除するため元に戻すことができません。" }
