--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -17,12 +17,12 @@ header.page-header
         header.practice-content__header
           h2.practice-content__title= t('helpers.label.practice.description')
         .practice-content__body.is-practice.js-markdown-view.js-target-blank.is-long-text-style
-          = @practice.description
+          = @practice.description.html_safe
       .practice-content
         .practice-content__header
           h2.practice-content__title= t('helpers.label.practice.goal')
         .practice-content__body.is-goal.js-markdown-view.js-target-blank.is-long-text-style
-          = @practice.goal
+          = @practice.goal.html_safe
 
       .page-actions
         ul.page-actions__items
